# ifsqsar

./: .gitignore  README.md  __main__.py  environment.yml  ifsqsar.py  pyproject.toml  setup.py
ifsqsar/: __main__.py  ifsqsar.py
ifsqsar/datasets/: TNB_solutes_solvents_ifsqar_dataset.xlsx
ifsqsar/models/: ifs_qsar_hhlb_linr.py  ifs_qsar_pplfer_solutes_A_linr.py  ifs_qsar_pplfer_system_2_a_linr.py  (+14 more)
models/: __init__.py  ifs_qsar_dsm_linr.py  ifs_qsar_fhlb_linr.py  ifs_qsar_hhlt_linr.py  ifs_qsar_pplfer_solutes_A_v3_linr.py  ifs_qsar_pplfer_system_2_b_linr.py  ifs_qsar_pplfer_system_2_c_linr.py  ifs_qsar_pplfer_system_2_l_linr.py  ifs_qsar_pplfer_system_2_s_linr.py  ifs_qsar_pplfer_system_2_v_linr.py  ifs_qsar_tm_linr.py  meta_qsar_MV_liquid.py  meta_qsar_MV_solid_V.py  meta_qsar_density_liquid.py  meta_qsar_density_solid.py  meta_qsar_logSo_liquid.py  meta_qsar_logSo_liquid_v2.py  meta_qsar_logSowet_liquid.py  meta_qsar_logSowet_liquid_v2.py  meta_qsar_logSw_liquid.py  meta_qsar_logSw_liquid_pplfer.py  meta_qsar_logSw_liquid_pplfer_v3.py  meta_qsar_logVP_liquid.py  meta_qsar_logVP_liquid_pplfer.py  meta_qsar_logVP_liquid_pplfer_v3.py  meta_qsar_logkaw_pplfer.py  meta_qsar_logkaw_pplfer_v2.py  meta_qsar_logkoa_pplfer.py  meta_qsar_logkoa_pplfer_v2.py  meta_qsar_logkow_pplfer.py  meta_qsar_logkow_pplfer_v2.py  meta_qsar_logkowdry_pplfer.py  meta_qsar_logkowdry_pplfer_v2.py  meta_qsar_logkowod_pplfer.py  meta_qsar_logkowod_pplfer_v2.py  meta_qsar_logksa_pplfer.py  meta_qsar_state.py  meta_qsar_tb_pplfer.py  meta_qsar_tm_consensus.py  meta_qsar_tm_pplfer.py  (+2 more)
