[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifsqsar"
version = "1.1.1"
description = "A package for applying IFS QSARs"
readme = "README.md"
license = {text = "GNU General Public License v2 (GPLv2)"}
authors = [
    {name = "Trevor N. Brown", email = "trevor.n.brown@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry"
]
requires-python = ">=3.4"

[project.urls]
Homepage = "https://github.com/tnbrowncontam/ifsapp"

[tool.setuptools.packages.find]
where = ["."]